--- a/scss/sections/_water-fall.scss
+++ b/scss/sections/_water-fall.scss
@@ -1,3 +1,5 @@
+@use "../components/mixins" as *;
+
 #water-fall {
   padding-top: 10px;
   .footer {
@@ -85,6 +87,21 @@
     height: 1.2%;
     border-radius: 50%;
     border: 1px solid black;
+    // extra small devices styles
+    @include respond-to("xs") {
+      width: 3px;
+      height: 3px;
+    }
+    //  small devices styles
+    @include respond-to("sm") {
+      width: 4px;
+      height: 4px;
+    }
+    //  meduim devices styles
+    @include respond-to("md") {
+      width: 7px;
+      height: 7px;
+    }
   }
 
   .d2-label.anime,
